feat: implement edition announce functionality
Create new endpoint to announce an edition. Create validator to check if an edition can be announced. Implement announceEdition service method. Add fetcher and modal in frontend to announce editions

#116
